fix notes upload spacing

--- a/organizer/static/organizer/style.css
+++ b/organizer/static/organizer/style.css
@@ -62,6 +62,16 @@
     height: 100%;
     padding: 0px 5px 0px 20px;
   }
+
+    
+
+     
+ul.errorlist{
+    margin-bottom: 2px;
+    padding-bottom: 2px;
+    height: 3% !important;
+    
+  }
   
   a {
     color: #17a2b8;
